--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -291,7 +291,7 @@
                     <img src="img/news/news-img1.jpeg" alt="결혼기념선행">
                   </a>
                   <div class="media-body b-btm">
-                    <a href="news.html" class=" p-head" target="_blank">
+                    <a href="/news" class=" p-head" target="_blank">
                       딸 결혼 기념 따뜻한 선행…안산 취약층에 성금
                     </a>
                     <p>
@@ -304,7 +304,7 @@
                     <img src="img/news/news-img2.jpeg" alt="안산시여성상·양성평등">
                   </a>
                   <div class="media-body b-btm">
-                    <a href="news.html" class=" p-head" target="_blank">
+                    <a href="/news" class=" p-head" target="_blank">
                       안산시여성상·양성평등 유공 시상
                     </a>
                     <p>
@@ -318,7 +318,7 @@
                     <img src="img/news/news-img3.jpeg" alt="목욕서비스시작">
                   </a>
                   <div class="media-body b-btm">
-                    <a href="news.html" class=" p-head" target="_blank">
+                    <a href="/news" class=" p-head" target="_blank">
                       드림재가복지센터-고잔16단지 LH주거행복지원센터, 목욕서비스 시작
                     </a>
                     <p>
@@ -326,7 +326,7 @@
                     </p>
                   </div>
                   <div class="news-more-btn">
-                    <a href="news.html" class="btn btn-info btn-sm da-link da-link-set">
+                    <a href="/news" class="btn btn-info btn-sm da-link da-link-set">
                       더보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
                     </a>
                   </div>
@@ -363,111 +363,39 @@
           <div id="owl-demo" class="owl-carousel owl-theme wow fadeIn">
             <div class="item view view-tenth">
               <img src="img/photo/class/18-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/17-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/16-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/10-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/9-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/8-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/6-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/5-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/4-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/3-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/2-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
             <div class="item view view-tenth">
               <img src="img/photo/class/1-class-img.jpg" alt="work Image">
-              <div class="mask">
-                <a href="blog-detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                  <i class="fa fa-link">
-                  </i>
-                </a>
-              </div>
             </div>
 
           </div>
