--- a/src/main/resources/templates/page/Contacts.html
+++ b/src/main/resources/templates/page/Contacts.html
@@ -59,7 +59,9 @@
         <div class="col-lg-6 main-box-set">
             <div class="row">
                 <div class="main-txt">
+                    <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC%EA%B5%90%EC%9C%A1%EC%9B%90/place/38500791?c=16.3,0,0,0,dh&isCorrectAnswer=true">
                     드림요양보호사교육원 오시는 길
+                    </a>
                 </div>
                 <div class="main-box">
                     <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC%EA%B5%90%EC%9C%A1%EC%9B%90/place/38500791?c=16.3,0,0,0,dh&isCorrectAnswer=true">
@@ -95,7 +97,7 @@
                             <img src="img/contact/g-ico.png">
                             <span>지선버스</span>
                             <p>77, 101, 123, 123-1, 9, 9-1, 99-1, 62</p>
-                            <img src="img/contact/R-ico.png">
+                            <img src="img/contact/r-ico.png">
                             <span>광역버스</span>
                             <p>300</p>
                         </div>
