--- a/src/main/resources/templates/page/Online-Consulting.html
+++ b/src/main/resources/templates/page/Online-Consulting.html
@@ -90,7 +90,9 @@
         <div class="col-lg-6 main-box-set">
             <div class="row">
                 <div class="main-txt">
+                    <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC/place/38500791?c=16.3,0,0,0,dh">
                     드림요양보호사교육원 오시는 길
+                    </a>
                 </div>
                 <div class="main-box2">
                     <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC/place/38500791?c=16.3,0,0,0,dh">
@@ -103,7 +105,7 @@
     <!--온라인상담 Main-end-->
 
     <!--온라인상담 하단 정보표시-->
-    <div class="container">
+    <div class="container end-set">
         <div class="col-lg-12 consult-info-box1">
             <div class="col-lg-3 consult-info-box-dtl">
                 <div class="row consult-contents-box">
