--- a/src/main/resources/templates/page/Welcome-Ceo.html
+++ b/src/main/resources/templates/page/Welcome-Ceo.html
@@ -19,28 +19,25 @@
     <link href="css/Welcome-Ceo.css" rel="stylesheet" />
 
     <!-- js placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/hover-dropdown.js"></script>
-    <script defer src="js/jquery.flexslider.js"></script>
-    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>
-    <script src="assets/owlcarousel/owl.carousel.js"></script>
+<!--    <script src="js/jquery.js"></script>-->
+<!--    <script src="js/bootstrap.min.js"></script>-->
+<!--    <script type="text/javascript" src="js/hover-dropdown.js"></script>-->
+<!--    <script defer src="js/jquery.flexslider.js"></script>-->
+<!--    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>-->
+<!--    <script src="assets/owlcarousel/owl.carousel.js"></script>-->
+<!--    <script src="js/jquery.easing.min.js"></script>-->
+<!--    <script src="js/link-hover.js"></script>-->
 
 
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/link-hover.js"></script>
-
-
-    <!--common script for all pages-->
-    <script src="js/common-scripts.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
+<!--    &lt;!&ndash;common script for all pages&ndash;&gt;-->
+<!--    <script src="js/common-scripts.js"></script>-->
+<!--    <script type="text/javascript" src="js/wow.min.js"></script>-->
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
-    <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-    <![endif]-->
+<!--    <script src="js/html5shiv.js"></script>-->
+<!--    <script src="js/respond.min.js"></script>-->
+
 
     <!--breadcrumbs start-->
     <div class="breadcrumbs">
