--- a/src/main/resources/templates/page/news.html
+++ b/src/main/resources/templates/page/news.html
@@ -11,10 +11,9 @@
     <link href="css/bootstrap-reset.css" rel="stylesheet">
     <!--external css-->
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/flexslider.css"/>
-    <link href="assets/bxslider/jquery.bxslider.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/animate.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<!--    <link rel="stylesheet" href="css/flexslider.css"/>-->
+<!--    <link href="assets/bxslider/jquery.bxslider.css" rel="stylesheet" />-->
+<!--    <link rel="stylesheet" href="css/animate.css">-->
 
 
     <!-- Custom styles for this template -->
@@ -422,10 +421,11 @@
                         </p>
                     </div>
                     <a href="http://www.incheonilbo.com/news/articleView.html?idxno=1067315">
+                        <button class="btn btn-primary">
+                            더보기&nbsp&nbsp&nbsp&nbsp&nbsp▶
+                        </button>
                     </a>
-                    <button class="btn btn-primary">
-                        더보기&nbsp&nbsp&nbsp&nbsp&nbsp▶
-                    </button>
+
                 </div>
             </div>
         </div>
