--- a/src/main/resources/templates/page/Online-Consulting.html
+++ b/src/main/resources/templates/page/Online-Consulting.html
@@ -54,6 +54,7 @@
     </div>
     <!--온라인상담 -title-end-->
 
+
     <!--온라인상담 Main-->
     <div class="container">
         <div class="col-lg-6 main-box-set">
@@ -76,6 +77,19 @@
                                 <td class="desc-textarea">상담내용</td>
                                 <td><textarea id="consult-desc"placeholder="" type="text"></textarea></td>
                             </tr>
+                            <tr class="privacy-agree">
+                                <td></td>
+                                <td>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" id="agree-btn">
+                                            개인정보수집 동의
+                                        </label>
+                                        <a href="javascript:void(0);" onclick="privacy_popup_open();">[전문보기]</a>
+                                    </div>
+                                    <div>※ 개인정보 제공자가 입력한 정보는 상담 외의 다른 목적으로 활용되지않습니다.</div>
+                                </td>
+                            </tr>
                             <tr>
                                 <td></td>
                                 <td>
@@ -91,7 +105,7 @@
             <div class="row">
                 <div class="main-txt">
                     <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC/place/38500791?c=16.3,0,0,0,dh">
-                    드림요양보호사교육원 오시는 길
+                        드림요양보호사교육원 오시는 길
                     </a>
                 </div>
                 <div class="main-box2">
@@ -136,8 +150,8 @@
                         연락처
                     </div>
                     <div class="info-number-box">
-                        <p>+82 010·9271·0191</p>
-                        <p>+82 031·505·0191</p>
+                        <p>+82 010ㆍ2466ㆍ9271</p>
+                        <p>+82 031ㆍ505ㆍ0191</p>
                     </div>
 
                 </div>
@@ -157,5 +171,35 @@
         </div>
     </div>
     <!--온라인상담 하단 정보표시-end-->
+
+    <!-- 개인정보 수집 모달 -->
+    <div class="modal-custom" id="privacy-dtl">
+        <div>
+            <p>개인정보 수집ㆍ이용 동의서 전문</p>
+            <a href="javascript:void(0);" onclick="privacy_popup_close();">
+                <img src="img/modal-close.png" alt="닫기">
+            </a>
+        </div>
+        <div>
+            <div>
+                <p>▶ 목적 : 드림요양보호사교육원 상담 신청에 따른 개인정보 수집</p>
+                <p>▶ 개인정보 수집 항목: 이름, 연락처</p>
+                <p>▶ 보유 및 이용기간 : 상담신청 일로 부터 3개월</p>
+                <p>▶ 개인정보 수집ㆍ이용에 동의를 거부할 권리가 있으며, 동의 거부시 온라인상담 신청이 불가합니다.</p>
+                <p class="privacy-ps">※ 개인정보 제공자가 입력한 정보는 상담 외의 다른 목적으로 활용되지 않습니다.</p>
+            </div>
+        </div>
+    </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script>
+      function privacy_popup_close(){
+        $('.modal-custom').css('display','none')
+
+        }
+        function privacy_popup_open(){
+        $('.modal-custom').css('display','block')
+
+        }
+    </script>
 </th:block>
 </html>
