--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -335,11 +335,12 @@
               </div>
               <div id="notice-board" class="tab-pane fade academy-intro">
                 <p>· 개강일 : <span>3월 20일</span></p>
-                <p>· 수업진행 : <span>월 20일 ~ 4월 28일 ( 6주 / 30일 )</span></p>
+                <p>· 수업진행 : <span>3월 20일 ~ 4월 28일 ( 6주 / 30일 )</span></p>
+                <p>· 수업시간 : <span>AM 9시 ~ PM 17시 30분</span></p>
                 <p>· 필요서류 : <span>여권사진 1매</span></p>
                 <p>· 시험응시료 (현금) : <span>32,000원</span></p>
                 <p>· 시험응시료 (카드) : <span>개별접수</span></p>
-                <p>· 시험시간 : <span>AM 9시 ~ FM 17시 30분</span></p>
+
               </div>
             </div>
           </div>
