--- a/src/main/resources/templates/page/Welcome-Ceo.html
+++ b/src/main/resources/templates/page/Welcome-Ceo.html
@@ -85,7 +85,7 @@
                 </p>
                 <p>저희 드림요양보호사교육원/드림재가복지센터는 2016년에 시작하여 지금까지 수많은 <br>
                     요양보호사 선생님을 배출하고 있습니다.<br>
-                    모두 사명감과 봉사정신, 노인공격의 마음을 가지고 일터로 나가 맡은 바 일을 해내고 계십니다.
+                    모두 사명감과 봉사정신, 노인공경의 마음을 가지고 일터로 나가 맡은 바 일을 해내고 계십니다.
                 </p>
                 <p>
                     이에 저희는 이러한 직업정신을 가진 요양보호사를 양성하는 것을 목적으로 교육중에 있습니다.<br>
