--- a/src/main/resources/templates/page/Welcome-Ceo.html
+++ b/src/main/resources/templates/page/Welcome-Ceo.html
@@ -88,7 +88,7 @@
                     모두 사명감과 봉사정신, 노인공경의 마음을 가지고 일터로 나가 맡은 바 일을 해내고 계십니다.
                 </p>
                 <p>
-                    이에 저희는 이러한 직업정신을 가진 요양보호사를 양성하는 것을 목적으로 교육중에 있습니다.<br>
+                    저희는 이러한 직업정신을 가진 요양보호사를 양성하는 것을 목적으로 교육중에 있습니다.<br>
                     가족같은 편안한 분위기로 교육받는 모든분이 행복한 교육 기관과 일하는 모든분이 보람있는 <br>
                     재가복지센터가 되기위해 노력하겠습니다.
                 </p>
