메타데이터 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,10 +3,18 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Developed By M Abdur Rokib Promy">
-    <meta name="author" content="cosmic">
-    <meta name="keywords" content="Bootstrap 3, Template, Theme, Responsive, Corporate, Business">
+    <meta http-equiv="Subject" content="안산 드림요양보호사교육원/재가센터(방문목욕,방문요양)" />
+    <meta name="author" content="최영준">
+    <meta name="keywords" content="안산, 안산 요양보호사교육원, 드림요양보호사교육원, 재가센터, 방문목욕, 방문요양, 국비지원, 국비지원 자격증">
+    <meta name="description" content="우피는 노션 페이지를 최적화된 웹사이트로 바꿔드립니다. 원하는 주소를 연결하여 나만의 홈페이지를 시작해 보세요.">
+    <meta property="og:url" content="https://www.dreameducare.co.kr">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="드림요양보호교육원 / 재가센터(방문요양, 방문목욕)">
+    <meta property="og:description" content="안산 국비지원 국가자격증취득, 방문요양서비스 방문목욕서비스까지 한번에.">
+    <meta property="og:image" content="..img/photo/facility/facility-img4.jpeg">
+
     <link rel="shortcut icon" href="img/favicon.ico">
 
     <title>
