--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="드림요양보호교육원 / 재가센터(방문요양, 방문목욕)">
     <meta property="og:description" content="안산 국비지원 국가자격증취득, 방문요양서비스 방문목욕서비스까지 한번에.">
-    <meta property="og:image" content="..img/photo/facility/facility-img4.jpeg">
+    <meta property="og:image" content="/img/photo/facility/facility-img4.jpeg">
 
     <link rel="shortcut icon" href="img/favicon.ico">
 
