--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -32,7 +32,14 @@
     <!--    Externel CSS-->
     <link rel="stylesheet" type="text/css" href="css/layout.css" />
     <script src="js/bootstrap.min.js"></script>
-
+    <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+    <script type="text/javascript">
+        if(!wcs_add) var wcs_add = {};
+        wcs_add["wa"] = "ff25d7565f2f08";
+        if(window.wcs) {
+          wcs_do();
+        }
+    </script>
 
 
 
