네이버사이트맵 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -15,8 +15,10 @@
     <meta property="og:description" content="안산 국비지원 국가자격증취득, 방문요양서비스 방문목욕서비스까지 한번에.">
     <meta property="og:image" content="http://www.dreameducare.co.kr/image/meta">
 
-<--구글사이트 맵-->
+<!--구글사이트 맵-->
     <meta name="google-site-verification" content="A6A1zZ4aZnjX3AYJ-DBbXdCoPwkQqoSNg93tDLh85y8" />
+<!--네이버사이트 맵-->
+    <meta name="naver-site-verification" content="8a3f9d90dcd69036c7c6611b11ea55c84394e35f" />
 
     <link rel="shortcut icon" href="img/favicon.ico">
 
